--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="messages">
-      <div class="message">Ehvhg v h vntrez votre nom d'utilisateur dans le premier champ:</div>
+      <div class="message">Entrez votre nom d'utilisateur dans le premier champ:</div>
     </div>
     <div class="controles">
         <textarea name="" id="username" cols="30" rows="1"></textarea><br>
