--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
         client.emit("envoi_message", msg, username);
       });
 
+
+      document.querySelector('#message').addEventListener("keyup", function(event) {
+  // Number 13 is the "Enter" key on the keyboard
+  if (event.keyCode === 13) {
+    // Cancel the default action, if needed
+    event.preventDefault();
+    // Trigger the button element with a click
+    document.getElementById("envoyer").click();
+  }
+})
+
+
       client.on("reception_message", msg => {
         console.log(msg);
         document.querySelector(".messages").innerHTML += `
