--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personnal Project</title>
   </head>
   <body>
     <div class="messages">
-      <div class="message">Entrez votre nom d'utilisateur dans le premier champ:</div>
+      <div class="message">
+        Entre votre nom d'utilisateur dans le premier champ:
+      </div>
     </div>
     <div class="controles">
-        <textarea name="" id="username" cols="30" rows="1"></textarea><br>
-      <textarea name="" id="message" cols="30" rows="10"></textarea><br>
+      <textarea name="" id="username" cols="30" rows="1"></textarea><br />
+      <textarea name="" id="message" cols="30" rows="10"></textarea><br />
       <button id="envoyer">Envoyer</button>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-
 
     <script>
       var client = io();
@@ -25,32 +30,30 @@
       });
       document.getElementById("envoyer").addEventListener("click", e => {
         let msg = document.getElementById("message").value;
-        let username = document.querySelector('#username').value;
+        let username = document.querySelector("#username").value;
         client.emit("envoi_message", msg, username);
-        document.querySelector("#message").value="";
+        document.querySelector("#message").value = "";
       });
 
-
-      document.querySelector('#message').addEventListener("keyup", function(event) {
-  // Number 13 is the "Enter" key on the keyboard
-  if (event.keyCode === 13) {
-    // Cancel the default action, if needed
-    event.preventDefault();
-    // Trigger the button element with a click
-    document.getElementById("envoyer").click();
-  }
-})
-
+      document
+        .querySelector("#message")
+        .addEventListener("keyup", function(event) {
+          // Number 13 is the "Enter" key on the keyboard
+          if (event.keyCode === 13) {
+            // Cancel the default action, if needed
+            event.preventDefault();
+            // Trigger the button element with a click
+            document.getElementById("envoyer").click();
+          }
+        });
 
       client.on("reception_message", msg => {
         console.log(msg);
         document.querySelector(".messages").innerHTML += `
         <div>${msg.user} : ${msg.msg}</div>`;
-       
       });
     </script>
   </body>
 </html>
-
 
 <!--git push vps -f master-->
