--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
-      rel="stylesheet"
-      href="/bootstrap/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personnal Project</title>
@@ -22,9 +19,7 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./client.js"></script>
-
-    </script>
+    <script src="./static/client.js"></script>
   </body>
 </html>
 
