injection of fun not allowed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="/bootstrap/dist/css/bootstrap.min.css"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personnal Project</title>
@@ -9,7 +12,7 @@
   <body>
     <div class="messages">
       <div class="message">
-        Entre votre nom d'utilisateur dans le premier champ:
+        Entrez votre nom d'utilisateur dans le premier champ:
       </div>
     </div>
     <div class="controles">
@@ -17,9 +20,8 @@
       <textarea name="" id="message" cols="30" rows="10"></textarea><br />
       <button id="envoyer">Envoyer</button>
     </div>
-
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./static/client.js"></script>
+    <script src="/scripts/client.js"></script>
   </body>
 </html>
 
