--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
       rel="stylesheet"
       href="/bootstrap/dist/css/bootstrap.min.css"
     />
+    <style>
+      #user_connected{
+        position:absolute;
+        right:60px;
+        top:60px;
+        height:200px;
+        width:200px;
+      }
+      
+    </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personnal Project</title>
@@ -22,6 +32,7 @@
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/scripts/client.js"></script>
+    <div id="user_connected">User connected:</div>
   </body>
 </html>
 
