--- a/index.html
+++ b/index.html
@@ -1,38 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
-      rel="stylesheet"
-      href="/bootstrap/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
     <style>
-      #user_connected{
-        position:absolute;
-        right:60px;
-        top:60px;
-        height:200px;
-        width:200px;
+      #user_connected {
+        position: absolute;
+        right: 60px;
+        top: 60px;
+        height: 200px;
+        width: 200px;
       }
-      
+
+      .message {
+        color:white;
+      }
+
+
+      #chatbox {
+        position: absolute;
+        left: 10%;
+        top: 10%;
+      }
+
+      #messages_box {
+        width: 500px;
+        height: 500px;
+        overflow:auto;
+        overflow-x:hidden;
+      }
+
+      body {
+        background-color: #343a40;
+      }
+
+      .last_messages {
+        color:white;
+      }
     </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personnal Project</title>
   </head>
   <body>
-    <div class="messages">
-      <div class="message">
-        Entrez votre nom d'utilisateur dans le premier champ:
+    <div id="chatbox">
+    <h1>MIAGE CHATBOX</h1>
+      <div class="messages">
+        <div class="message">
+          Username:
+        </div>
       </div>
-    </div>
-    <div class="controles">
-      <textarea name="" id="username" cols="30" rows="1"></textarea><br />
-      <textarea name="" id="message" cols="30" rows="10"></textarea><br />
-      <button id="envoyer">Envoyer</button>
+      <div class="controles">
+        <textarea name="" id="username" cols="30" rows="1"></textarea><br />
+
+        <div id="messages_box" class="p-3 mb-2 bg-secondary text-dark"></div>
+        <br />
+
+        <textarea name="" id="message" cols="80" rows="auto"></textarea><br />
+        <button id="envoyer">Envoyer</button>
+      </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/scripts/client.js"></script>
-    <div id="user_connected">User connected:</div>
+    <span
+      id="user_connected"
+      class="p-3 mb-2 bg-success text-white border border-light"
+      >User connected:</span
+    >
   </body>
 </html>
 
