--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div id="messages_box" class="p-3 mb-2 bg-secondary text-dark"></div>
         <br />
 
-        <textarea name="" id="message" cols="80" rows="auto"></textarea><br />
+        <textarea name="" id="message" cols="80" rows="auto" class="p-3 mb-2 bg-dark text-white"></textarea><br />
         <button id="envoyer">Envoyer</button>
       </div>
     </div>
