--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       #chatbox {
         position: absolute;
         left: 10%;
-        top: 10%;
+        top: 7%;
       }
 
       #messages_box {
@@ -50,12 +50,13 @@
         </div>
       </div>
       <div class="controles">
-        <textarea name="" id="username" cols="30" rows="1"></textarea><br />
+        <textarea name="" id="username" cols="30" rows="1">FooBarTotoTiti</textarea><br />
 
-        <div id="messages_box" class="p-3 mb-2 bg-secondary text-dark"></div>
+        <div id="messages_box" class="p-3 mb-2 bg-secondary text-dark">
+        </div>
         <br />
 
-        <textarea name="" id="message" cols="80" rows="auto" class="p-3 mb-2 bg-dark text-white"></textarea><br />
+        <textarea name="" id="message" cols="80" rows="5" class="p-3 mb-2 bg-dark text-white"></textarea><br />
         <button id="envoyer">Envoyer</button>
       </div>
     </div>
