border-color chatbox white

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="controles">
         <textarea name="" id="username" cols="30" rows="1">FooBarTotoTiti</textarea><br />
 
-        <div id="messages_box" class="p-3 mb-2 bg-secondary text-dark">
+        <div id="messages_box" class="p-3 mb-2 bg-secondary text-dark border border-light">
         </div>
         <br />
 
