--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       .last_messages {
         color:white;
       }
+
+      h1 {
+    text-shadow: -1px 0 #777777, 0 1px #777777, 1px 0 black, 0 -1px #777777;
+}
     </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
